--- a/src/styles/_animations.scss
+++ b/src/styles/_animations.scss
@@ -135,7 +135,6 @@
 **|| -------- SECTION SKILLS -------- ||
 */
 
-
 @keyframes circlesIntro {
   0% {
     opacity: 0;
@@ -151,19 +150,6 @@
   }
 }
 
-/**
-**|| ---------- SKILLS IN PROGRESS --------- ||
-*/
-
-@keyframes progressbar {
-  from {
-    max-width: 0%;
-  }
-  to {
-    max-width: 100%;
-  }
-}
-
 @keyframes fadeUpRight {
   0% {
     opacity: 0;
@@ -171,11 +157,22 @@
   }
 
   50% {
-    
   }
 
   100% {
     opacity: 1;
-    transform: translate(0, -50%)
+    transform: translate(0, -50%);
+  }
+}
+
+@keyframes animate {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
   }
 }
