--- a/src/styles/components/_start.scss
+++ b/src/styles/components/_start.scss
@@ -5,6 +5,7 @@
   top: 0;
   left: 0;
   width: 100vw;
+  max-width: 100vw;
   height: 100vh;
   display: grid;
   place-items: center;
@@ -22,7 +23,6 @@
       0 11px 0 #1a1a1a, 0 12px 0 #181818, 0 13px 0 #161616, 0 14px 0 #141414,
       0 15px 0 #121212, 0 22px 30px rgba(0, 0, 0, 0.9);
     animation: animate 1s infinite;
-    // transition: 0.2s ease-in-out;
     transform: translateY(0);
     opacity: 1;
     transition: transform 0.6s ease-in-out, opacity 1s ease-in-out;
