Add some front style with scss and ts

--- a/src/styles/_index.scss
+++ b/src/styles/_index.scss
@@ -7,4 +7,6 @@
 
 //Components
 @forward './components/start';
+@forward './components/hud';
 @forward './components/character-detail';
+@forward './components/character-state';
