--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -7,7 +7,20 @@
 body {
   font-size: 1.6rem;
   font-family: "Ubuntu", sans-serif;
-  //overflow: hidden;
+  background-image: url(https://wallpaperaccess.com/full/380883.jpg);
+  background-size: cover;
+
+  &:after {
+    position: absolute;
+    content:'';
+    background: #333;
+    opacity: .5;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+  }
 }
 
 h1,
