--- a/src/styles/components/_character-detail.scss
+++ b/src/styles/components/_character-detail.scss
@@ -1,5 +1,18 @@
+.charactersDetails {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+  gap: 1rem;
+}
 div[class^='characterDetail-'] {
+  width: 100%;
+  background-image: linear-gradient(90deg, red, blue);
+
   img {
-    max-width: 10rem;
+    max-width: 5rem;
   }
 }
